interlace: fix negotiation with fixed framerate downstream

https://bugzilla.gnome.org/show_bug.cgi?id=762924